syntax = "proto3";
package poktroll.servicer;

option go_package = "poktroll/x/servicer/types";

message Relay {
    RelayRequest req = 1;
    RelayResponse res = 2;
}

message RelayRequest {
    string method = 1;
    string url = 2;
    map<string, string> headers = 3;
    bytes payload = 4;
}

message RelayResponse {
    bytes payload = 1;
    int32 status_code = 2;
    map<string, string> headers = 3;
    bytes signature = 4;
}